feat: updated api definition
