# Unicorn.Contracts/api.yaml
@@ -2,6 +2,7 @@ openapi: "3.0.1"
 info:
   title: "Unicorn Contracts API"
   version: "1.0.0"
+  description: Unicorn Properties Contract Service API
 paths:
   /contract:
     post:
@@ -9,7 +10,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ContractModel"
+              $ref: "#/components/schemas/CreateContractModel"
         required: true
       responses:
         "200":
@@ -63,11 +64,42 @@ paths:
           application/json: '{"statusCode": 200}'
         passthroughBehavior: "when_no_match"
         type: "mock"
+    put:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateContractModel"
+        required: true
+      responses:
+        "200":
+          description: "200 response"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Empty"
+      x-amazon-apigateway-request-validator: "Validate body"
+      x-amazon-apigateway-integration:
+        credentials: 
+          Fn::GetAtt: [ContractsApiIntegrationRole, Arn]
+        httpMethod: "PUT"
+        uri: {"Fn::Sub":"arn:aws:apigateway:${AWS::Region}:sqs:path/${AWS::AccountId}/${ContractServiceIngestQueue}"}
+        responses:
+          default:
+            statusCode: "200"
+        requestParameters:
+          integration.request.header.Content-Type: "'application/x-www-form-urlencoded'"
+        requestTemplates:
+          application/json: "Action=SendMessage&MessageBody=$input.body&MessageAttribute.1.Name=HttpMethod&MessageAttribute.1.Value.StringValue=$context.httpMethod&MessageAttribute.1.Value.DataType=String"
+        passthroughBehavior: "never"
+        type: "aws"
 components:
   schemas:
-    ContractModel:
+    CreateContractModel:
       required:
         - "property_id"
+        - "address"
+        - "seller_name"
       type: "object"
       properties:
         address:
@@ -88,6 +120,14 @@ components:
               type: "integer"
         seller_name:
           type: "string"
+        property_id:
+          type: "string"
+    UpdateContractModel:
+      required:
+        - "property_id"
+        - "seller_name"
+      type: "object"
+      properties:
         property_id:
           type: "string"
     Empty:
